repair cursor on mobile devices

--- a/styles/mediaQ1000.css
+++ b/styles/mediaQ1000.css
@@ -33,3 +33,8 @@
   width: 80vw;
   margin-bottom: 3vh;
 }
+#cursor,
+#cursor_follow {
+  background-color: transparent;
+  border-color: transparent;
+}
